# stoodly

./: .env  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  INSTALL.md  LICENSE-MIT  README.md  SECURITY.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: pipeline.yml
account/: Cargo.toml
account/src/: user.rs
application/: Cargo.toml
application/src/: lib.rs  status.rs
application/src/account/: user.rs
application/src/organization/: team.rs
application/src/status/: post.rs
client/: Cargo.toml
domain/: Cargo.toml
domain/src/: lib.rs  status.rs
domain/src/account/: user.rs
domain/src/organization/: team.rs
domain/src/status/: post.rs
infrastructure/: Cargo.toml
infrastructure/src/: lib.rs  mongodb.rs
infrastructure/src/memory/account/: user.rs
infrastructure/src/memory/organization/: team.rs
infrastructure/src/memory/status/: post.rs
infrastructure/src/mongodb/account/: user.rs
infrastructure/src/mongodb/organization/: team.rs
infrastructure/src/mongodb/status/: post.rs
interfaces/: Cargo.toml
interfaces/src/: handler.rs  lib.rs  schema.rs
interfaces/src/status/: request.rs
organization/: Cargo.toml
organization/src/: team.rs
repository/: Cargo.toml
repository/src/: lib.rs  memory.rs  mongodb.rs
repository/src/memory/account/: user.rs
repository/src/memory/organization/: team.rs
repository/src/memory/status/: post.rs
repository/src/mongodb/account/: user.rs
repository/src/mongodb/organization/: team.rs
repository/src/mongodb/status/: post.rs
server/: Cargo.toml
server/src/: main.rs
server/src/http/: graphql.rs
server/src/http/graphql/: schema.rs  status.rs
status/: Cargo.toml
status/src/: lib.rs  post.rs
test/db/stoodly/: local_env.js  team  team.json  user  user.json
test/graphql/: .graphqlconfig
test/smoke_test/: .graphqlconfig
test/smoke_test/mutation/: deletePost.graphql
test/smoke_test/query/: post.graphql
tools/graphql/: schema.graphql
tools/graphql/mutation/post/: createPost.graphql  updatePost.graphql
