[package]
name = "interfaces"
version = "0.1.0"
authors = ["Benjamin Jacob Berg <benjaminjacobberg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
application = { path = "../application", version = "0.1.0" }
domain = { path = "../domain", version = "0.1.0" }
infrastructure = { path = "../infrastructure", version = "0.1.0" }
actix-web = "3.0.2"
chrono = "0.4"
uuid = { version = "0.8", features = ["serde", "v4"] }

[dependencies.juniper]
git = "https://github.com/graphql-rust/juniper"
branch = "master"

[dependencies.juniper_actix]
git = "https://github.com/graphql-rust/juniper"
branch = "master"
